--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>lesson_2</title>
+        <title>Lesson_2 - version 1.0</title>
     </head>
     <body>
         <h1>Hello World!</h1>
@@ -10,6 +10,12 @@
         <em>Hello World!</em><br><br><br>
         <u>Hello World!</u><br><br><br>
         <b>Hello World!</b>
-        <mark>Hello World</mark>
+        <mark>Hello World</mark> <br>
+        <i>hello world!</i> <br>
+        <del>Hello World</del><br>
+        <ins>Hello World</ins>
+        <sub>Hello World</sub>
+        <sup>Hello World</sup>
+        <small>Hello World</small>
     </body>
 </html>
